--- a/project.config
+++ b/project.config
@@ -2,3 +2,12 @@
 	inheritFrom = Public-Projects
 [project]
 	description = Official Docker image of Gerrit Code Review
+[access "refs/*"]
+	owner = group docker-gerrit
+	create = group docker-gerrit
+	push = +force group docker-gerrit
+	label-Code-Review = -2..+2 group docker-gerrit
+	label-Code-Review = -1..+1 group Registered Users
+	label-Verified = -1..+1 group Registered Users
+	label-Verified = -1..+1 group docker-gerrit
+	submit = group docker-gerrit
