--- a/project.config
+++ b/project.config
@@ -11,3 +11,4 @@
 	label-Verified = -1..+1 group Registered Users
 	label-Verified = -1..+1 group docker-gerrit
 	submit = group docker-gerrit
+	createSignedTag = group docker-gerrit
