Modify access rules

--- a/project.config
+++ b/project.config
@@ -12,3 +12,4 @@
 	label-Verified = -1..+1 group docker-gerrit
 	submit = group docker-gerrit
 	createSignedTag = group docker-gerrit
+	createTag = group docker-gerrit
