Modify access rules

--- a/project.config
+++ b/project.config
@@ -13,3 +13,4 @@
 	submit = group docker-gerrit
 	createSignedTag = group docker-gerrit
 	createTag = group docker-gerrit
+	removeReviewer = group google/gerritcodereview-maintainers@googlegroups.com
